web-infras/parser/tests/fixtures/babel/core/uncategorised/411/output.txt
[SyntaxError]: Illegal continue statement: no surrounding iteration statement. (1,1)
1|continue
 |^
